--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -76,7 +76,7 @@
       <table class="table table-condensed table-bordered">
         <tr>
           <th style="width:15px;">
-            <input type="checkbox">
+            <input type="checkbox" id="checkbox_all" class="checkall">
           </th>
           <th width="120px;">出库单ID</th>
           <th>名称</th>
