--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -70,7 +70,7 @@
       <table class="table table-condensed table-bordered">
         <tr>
           <th style="width:15px;">
-            <input type="checkbox">
+            <input type="checkbox" id="checkbox_all" class="checkall">
           </th>
           <th>退货单ID</th>
           <th width="250px;">名称</th>
