库存调整页面修改

--- a/core/app/views/StockRecords/adjustStock.html
+++ b/core/app/views/StockRecords/adjustStock.html
@@ -44,7 +44,7 @@
       </tr>
       <tr>
         <th>调整数量<i class="icon-asterisk" style="color:red"></i></th>
-        <td colspan="3"><input type="text" name="record.qty" value="" required></td>
+        <td colspan="3"><input type="text" name="record.qty" value="" placeholder="请填写 ± 数值" required></td>
       </tr>
       <tr>
         <th>备注</th>
