--- a/core/app/views/StockRecords/index.html
+++ b/core/app/views/StockRecords/index.html
@@ -27,8 +27,7 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" name="p.search" placeholder="物料编码" value="${p.search}" style="width:
-        100px;">
+        <input type="text" name="p.search" placeholder="SKU,采购计划ID,FBA" value="${p.search}" style="width:200px;">
         <input type="hidden" name="p.page" value="${p.page}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
