--- a/core/app/views/Shipments/_shipitem.html
+++ b/core/app/views/Shipments/_shipitem.html
@@ -39,7 +39,7 @@
   #{/if}
     <th>运营创建人</th>
     <th>采购创建人</th>
-    <th>丢失量/赔偿金额</th>
+    <th width="70px;">丢失量<br>/赔偿金额</th>
   #{power.ck 'paymentunits.postfromtransport'}
       #{if isExpress}
         <th>记录运费</th>
