--- a/core/app/views/Shipments/index.html
+++ b/core/app/views/Shipments/index.html
@@ -7,6 +7,11 @@
     #{script 'bootstrap-multiselect.js'/}
     #{script 'shipments/index.js'/}
 #{/set}
+<style>
+  .table td{
+    vertical-align:middle;
+  }
+</style>
 #{info_row}
 <ul>
   <li>带有 <i style="color:#dc143c;" class="icon-warning-sign"></i> 符号表示此运输单没有创建者,没有确认负责人,需要进行确认</li>
@@ -106,3 +111,12 @@
     </div>
   </div>
 </form>
+
+<div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
+  <div class="modal-body">
+    <div id="refresh_div"></div>
+  </div>
+  <div class="modal-footer">
+    <button class="btn" data-dismiss="modal" aria-hidden="true">关闭</button>
+  </div>
+</div>
