--- a/core/app/views/Shipments/_shipment_list.html
+++ b/core/app/views/Shipments/_shipment_list.html
@@ -1,18 +1,18 @@
 <table class="table table-condensed table-bordered" id="shipmentTable">
   <tr>
-    <th style="width:2%"><input type="checkbox" class="checkbox_all" value="0"/></th>
-    <th style="width:10% ">#</th>
-    <th style="width:15%">Track No.</th>
-    <th style="width:10%">运输商</th>
-    <th style="width:5%">国际快递</th>
-    <th style="width:5%">运输方式</th>
-    <th style="width:5%">去往仓库</th>
-    <th style="width:10%">状态</th>
-    <th style="width:7%">预计开始时间</th>
-    <th style="width:7%">创建时间</th>
-    <th style="width:7%">预计到库时间</th>
-    <th style="width:8%">创建者</th>
-    <th style="width:8%">出库单ID</th>
+    <th style="width:15px;"><input type="checkbox" class="checkbox_all" value="0"/></th>
+    <th style="width:60px;">#</th>
+    <th style="width:150px;">Track No.</th>
+    <th style="width:200px;">运输商</th>
+    <th style="width:80px;">国际快递</th>
+    <th style="width:60px;">运输方式</th>
+    <th style="width:80px;">去往仓库</th>
+    <th style="width:80px;">状态</th>
+    <th style="width:120px;">预计开始时间</th>
+    <th style="width:120px;">创建时间</th>
+    <th style="width:120px;">预计到库时间</th>
+    <th style="width:30px;">创建者</th>
+    <th style="width:100px;">出库单ID</th>
   </tr>
 #{list items:shipments, as:'ship'}
   <tr>
