--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -47,7 +47,7 @@
 
         <div class="input-prepend input-append inline">
           <span class="add-on"><i class="icon-search"></i></span>
-          <input type="text" style="width:200px;" name="p.search" placeholder="收货入库单ID or SKU" value="${p.search}">
+          <input type="text" style="width:220px;" name="p.search" placeholder="收货入库单ID or SKU or 采购计划ID" value="${p.search}">
           <input type="hidden" name="p.page" value="${p.page}">
           <button class="btn btn-primary" data-loading>搜索</button>
         </div>
@@ -72,9 +72,9 @@
             <th>项目名称</th>
             <th>状态</th>
             <th width="150px;">制单时间</th>
-            <th width="200px;">收货人/收货日期</th>
-            <th>质检人/质检日期</th>
-            <th>确认人/入库日期</th>
+            <th width="150px;">收货人/收货日期</th>
+            <th width="150px;">质检人/质检日期</th>
+            <th width="150px;">确认人/入库日期</th>
             <th width="250px;">备注</th>
           </tr>
         #{list items: inbounds, as: 'i'}
@@ -91,7 +91,7 @@
             <td>${i.projectName}</td>
             <td style="background-color:${i.status.rgb()}">${i.status?.label()}</td>
             <td>#{time_tooltip time:i.createDate, datetime:true/}</td>
-            <td>${i.receiver?.username} / #{time_tooltip time:i.receiveDate, datetime:true/}</td>
+            <td>${i.receiver?.username} / #{time_tooltip time:i.receiveDate, datetime:false/}</td>
             <td>
                 #{list items:i.qcDtos, as:'d'}
                 ${d}<br>
