--- a/core/app/views/Refunds/edit.html
+++ b/core/app/views/Refunds/edit.html
@@ -93,6 +93,8 @@
   </div>
 </div>
 
+#{records records:logs/}
+
 <div id="fba_carton_contents_modal" class="modal hide fade" style="width:800px;">
   <div class="modal-body">
     <div id="refresh_div"></div>
