退货单查询功能修改

--- a/core/app/views/Refunds/index.html
+++ b/core/app/views/Refunds/index.html
@@ -46,7 +46,8 @@
 
       <div class="input-prepend input-append inline">
         <span class="add-on"><i class="icon-search"></i></span>
-        <input type="text" class="input-medium" name="p.search" placeholder="搜索ID自动识别" value="${p.search}">
+        <input type="text" class="input-medium" style="width:220px;" name="p.search"
+               placeholder="退货单ID,采购计划ID,SKU" value="${p.search}">
         <input type="hidden" name="p.page" value="${p.page}">
         <button class="btn btn-primary" data-loading>搜索</button>
       </div>
