--- a/core/app/views/Inbounds/index.html
+++ b/core/app/views/Inbounds/index.html
@@ -81,7 +81,7 @@
           <tr>
             <td><input type="checkbox" name="ids" value="${i.id}"></td>
             <td><a href="@{Inbounds.edit(i.id)}">${i.id}</a></td>
-            <td style="cursor:pointer;" data-toggle="toggle" data-target="#sr_${i_index}">
+            <td style="cursor:pointer;" name="clickTd" data-id="${i.id}">
               <span><i class="icon-reorder"></i></span>
               <span>${i.name}</span>
               <span class="badge badge-info">${i.units.size()}</span>
@@ -103,13 +103,6 @@
                 #{/list}
             </td>
             <td title="${i.memo}">${i.memo.xxLong()}</td>
-          </tr>
-          <tr id="sr_${i_index}" style="display:none;">
-            <td colspan="12">
-              <div>
-                  #{render 'Inbounds/_units.html', units:i.units, is_check: true/}
-              </div>
-            </td>
           </tr>
         #{/list}
           <tr>
