*  更换 FBA 时先请求创建 FBAInbountShipmentPlan, 然后再让用户确认是否需要当前 FBA.

--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -263,7 +263,7 @@
                     #{power.ck 'fbas.update'}
                       <div class="btn-toolbar">
                         <a href="javascript:void(0)" class="btn btn-small btn-warning" id="replaceUnitFBA"
-                           data-unit-id="${unit.id}" title="由于FBA过期或者需要更换">更换 ${unit.fba?.shipmentId}
+                           data-unit-id="${unit.id}">更换 ${unit.fba?.shipmentId}
                         </a>
                       </div>
                     #{/power.ck}
