--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -3,7 +3,7 @@
 #{set 'moreScripts'}
     #{script 'component/pagination.coffee'/}
     #{script 'procureunits/index.coffee'/}
-    #{script 'procureunits/index.js'/}
+    #{script 'procureunits/index.es6'/}
     #{script 'procureunits/_unit_list.coffee'/}
 #{/set}
 <style>
