--- a/core/app/views/ProcureUnits/_splitOnSelling.html
+++ b/core/app/views/ProcureUnits/_splitOnSelling.html
@@ -1,42 +1,61 @@
 <tr>
-  <th>#</th>
-  <td>&nbsp;</td>
-
+  <th>采购计划ID</th>
+  <td width="320px;">&nbsp;</td>
+  <th>类型</th>
+  <td width="300px;">
+  #{if unit.stage.name()=='IN_STORAGE'} 库存分拆 #{/if}
+  #{else } 采购分拆 #{/else}
+  </td>
+  <th></th>
+  <td width="320px;"></td>
+</tr>
+<tr>
   <th>Selling</th>
-  <td>
-    ${unit.selling.sellingId}
-  </td>
-
+  <td><input type="text" id="sellingId" name="newUnit.selling.sellingId" style="width:300px;"
+             value="${unit.selling?.sellingId}" readonly></td>
   <th>SKU</th>
-  <td>${unit.sku}</td>
+  <td><input type="text" id="select_sku" name="newUnit.product.sku" value="${unit.sku}"></td>
+  <th>产品名称</th>
+  <td><input type="text" id="productName" style="width:300px;" value="${unit.product?.abbreviation}" readonly></td>
 </tr>
-
 <tr>
-  <th>仓库</th>
+#{if unit.stage.name()=='IN_STORAGE'}
+  <th>库存数量</th>
   <td>
-  ${unit.whouse.name}
+    <input type="text" class="input-mini" name="newUnit.availableQty" id="planQty" placeholder="小于${unit.availableQty}" required>
+    <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
+    <span class="add-on">箱</span>
   </td>
-
+#{/if}
+#{else }
+  <th><i class="icon-asterisk" style="color:red"></i>采购数量</th>
+  <td>
+    <input type="text" class="input-mini" name="newUnit.attrs.planQty" id="planQty" required placeholder="小于${unit.attrs.planQty}">
+    <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
+    <span class="add-on">箱</span>
+  </td>
+#{/else}
   <th>供应商</th>
-  <td>${unit.cooperator.fullName}</td>
-
-  <th>采购数量</th>
+  <td>${unit.cooperator.name}
+    <span style="width:200px;display:${unit.period?: 'none'}" id="unit_period">(生产周期：${unit.period}天)</span>
+    <input type="hidden" id="cooperId" value="${unit.cooperator.id}">
+    <input type="hidden" id="size_of_box" value="${unit.boxSize}">
+  </td>
+  <th>单价</th>
   <td>
-    <input type="text" name="newUnit.attrs.planQty" value="${newUnit.attrs.planQty}">
+    <input type="text" class="span3" id="price_input" name="newUnit.attrs.price" value="${unit.attrs.price}">
+  #{pickCurrency id:'unit_currency', name:'newUnit.attrs.currency', class:'span3', c:unit.attrs.currency?:helper.Currency.CNY /}
   </td>
 </tr>
-
 <tr>
-  <th>预计交货时间</th>
+  <th><i class="icon-asterisk" style="color:red"></i>预计交货时间</th>
   <td>
-    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${newUnit.attrs.planDeliveryDate.date()}">
+    <input type="date" name="newUnit.attrs.planDeliveryDate" value="${newUnit.attrs.planDeliveryDate.date()}" required>
   </td>
-
   <th>预计运输时间</th>
   <td>
     <input type="date" name="newUnit.attrs.planShipDate" value="${newUnit.attrs.planShipDate.date()}">
   </td>
-
   <th>预计到库时间</th>
   <td>
     <input type="date" name="newUnit.attrs.planArrivDate" value="${newUnit.attrs.planArrivDate.date()}">
@@ -44,25 +63,44 @@
 </tr>
 
 <tr>
-  <th>单价</th>
-  <td>${unit.attrs.price} ${unit.attrs.currency.name()}</td>
-
+  <th>去往仓库</th>
+  <td>
+    <select name="newUnit.whouse.id" id="warehouse_select">
+      <option value="">请选择</option>
+    #{list items:whouses, as:'w'}
+      <option value="${w.id}" #{if w.id==unit.whouse?.id} selected #{/if}>${w.name}</option>
+    #{/list}
+    </select>
+  </td>
   <th>阶段</th>
-  <td>${models.procure.ProcureUnit.STAGE.DELIVERY}</td>
-
+  <td style="color:${unit.stage.rgb()}">${unit.stage?.label()}</td>
   <th>采购单</th>
   <td>
     <a href="@{Deliveryments.show(unit.deliveryment.id)}" target="_blank">${unit.deliveryment.id}</a>
   </td>
 </tr>
-
 <tr>
   <th>运输方式</th>
   <td>
-    ${unit.shipType.label()}
+  #{list items:models.procure.Shipment.T.values(), as:'t'}
+    <label class="radio">
+      <input type="radio" name="newUnit.shipType" value="${t.name()}" ${ t == unit.shipType ? 'checked': 'unchecked'}>
+    ${t.label()}
+    </label>
+  #{/list}
   </td>
+  <th colspan="2"></th>
+  <th>B2B选项</th>
+  <td>
+    <label class="checkbox inline">
+      <input type="checkbox" name="newUnit.isb2b" value="true" #{if unit.projectName=='B2B'} checked #{/if}>
+      B2B
+    </label>
+  </td>
+</tr>
 
-  <th>是否到货代</th>
-  <td>#{yesOrNo f: unit.isPlaced/}</td>
-  <td colspan="2"></td>
+<tr>
+  <td colspan="6">
+  #{render 'ProcureUnits/_shipments.html'/}
+  </td>
 </tr>
