--- a/core/app/views/ProcureUnits/_unit_table_trs.html
+++ b/core/app/views/ProcureUnits/_unit_table_trs.html
@@ -3,23 +3,33 @@
 * Whouse: whouses
 }*
 #{set product: unit.selling.listing.product/}
+
 <tr>
-  <th style="width:100px;">SellingId</th>
-  <td style="width:650px;">
-    <input type="text" name="unit.selling.sellingId" id="sellingId" value="${unit.selling.sellingId}" readonly>
+  <th style="width:140px;">SellingId</th>
+  <td style="width:320px;">
+    <input type="text" name="unit.selling.sellingId" id="sellingId" value="${unit.selling.sellingId}"
+           style="width:280px;" readonly>
   </td>
   <th style="width:100px;">SKU</th>
   <td>
     <input type="text" name="unit.product.sku" id="unit_sku" value="${product.sku}" readonly>
   </td>
+  <th>产品名称</th>
+  <td width="320px;"><input type="text" value="${product.abbreviation}" readonly></td>
 </tr>
 
 <tr>
 #{set copers:product.cooperators() /}
-  <th>供应商</th>
-  <td>
+  <th><i class="icon-asterisk" style="color:red"></i>采购数量/库存数量</th>
+  <td colspan="3">
+    <input type="text" class="input-mini" placeHolder="具体数量" name="unit.attrs.planQty" id="planQty"
+           value="${unit.attrs.planQty}" required>
+    <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
+    <span class="add-on">箱</span>
+    <input type="hidden" name="unit.attrs.qty" value="${unit.attrs.qty}">
+
     <select name="unit.cooperator.id" native='true'>
-      <option>请选择</option>
+      <option>供应商</option>
     #{list items:copers, as:'c'}
       <option value="${c.id}" #{if c.id == unit.cooperator?.id}selected#{/if}>${c.name}</option>
     #{/list}
@@ -27,66 +37,64 @@
     <span style="width:200px;display:${unit.period?: 'none'}" id="unit_period">（生产周期：${unit.period}天）</span>
   </td>
 
-  <th>价格</th>
+  <th>单价</th>
   <td>
-    <input type="text" class="span2" id="unit_price" name="unit.attrs.price" value="${unit.attrs.price}">
-  #{pickCurrency id:'unit_currency', name:'unit.attrs.currency', class:'span2', c:unit.attrs.currency?:helper.Currency.CNY /}
+    <input type="text" class="span3" id="unit_price" name="unit.attrs.price" value="${unit.attrs.price}">
+  #{pickCurrency id:'unit_currency', name:'unit.attrs.currency', class:'span3', c:unit.attrs.currency?:helper.Currency.CNY /}
+  </td>
+</tr>
+
+<tr style="display:none;" id="">
+  <th>差数是否退回</th>
+  <td colspan="5">
+    <label class="radio inline">
+      <input type="radio" value="">退回到父计划
+    </label>
+    <label class="radio inline">
+      <input type="radio" value="">否
+    </label>
   </td>
 </tr>
 
 <tr>
-  <th>采购数量</th>
+  <th><i class="icon-asterisk" style="color:red"></i>预计交货日期</th>
   <td>
-    <input type="text" class="input-mini" placeHolder="具体数量" name="unit.attrs.planQty" id="planQty"
-           value="${unit.attrs.planQty}">
-    <input type="text" id="box_num" class="input-mini" placeHolder="箱数">
-    <span class="add-on">箱</span>
-    <input type="hidden" name="unit.attrs.qty" value="${unit.attrs.qty}">
-  </td>
-  <th>预计交货日期</th>
-  <td>
-    <input type="date" name="unit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}">
+    <input type="date" name="unit.attrs.planDeliveryDate" value="${unit.attrs.planDeliveryDate.date()}" required>
   #{if oldplanDeliveryDate!=null}
     <span class="add-on">比原预计交货日期${oldplanDeliveryDate.date()}推迟${(unit.attrs
     .planDeliveryDate.getTime()-oldplanDeliveryDate.getTime())/(24*60*60*1000)}天</span>
   #{/if}
     <input type="hidden" name="unit.attrs.deliveryDate" value="${unit.attrs.deliveryDate.date()}">
   </td>
-</tr>
-
-<tr>
-  <th>采购取样</th>
-  <td>
-    <input type="text" name="unit.purchaseSample" value="${unit.purchaseSample}"/><span class="add-on">个</span>
-  </td>
-  <th>质检取样</th>
-  <td>
-    <input type="text" value="${unit.fetchCheckTaskQcSample()}" readonly/><span class="add-on">个</span>
-  </td>
-</tr>
-
-<tr>
   <th>预计运输时间</th>
   <td>
     <input type="date" name="unit.attrs.planShipDate" value="${unit.attrs.planShipDate.date()}">
   </td>
   <th>预计到库时间</th>
   <td>
-    <div class="input-append">
-      <input type="date" name="unit.attrs.planArrivDate" value="${unit.attrs.planArrivDate.date()}">
-      <span class="add-on">? 天</span>
-    </div>
+    <input type="date" name="unit.attrs.planArrivDate" value="${unit.attrs.planArrivDate.date()}">
+    <span class="add-on">? 天</span>
   </td>
 </tr>
 
 <tr>
   <th>去往仓库</th>
   <td>
-  #{select 'unit.whouse.id', items: whouses, labelProperty: 'name', value: unit.whouse?.id}#{/select}
+    <select name="unit.whouse.id">
+    #{list items:whouses, as:'w'}
+      <option value="${w.id}" #{if w.id==unit.whouse?.id} selected #{/if}>${w.name}</option>
+    #{/list}
+    </select>
   </td>
-  <th>阶段</th>
+  <th>采购取样</th>
   <td>
-    <span style="color:${unit.stage.rgb()}">${unit.stage.label()}</span>
+    <input type="text" class="span3" name="unit.purchaseSample" value="${unit.purchaseSample}"/>
+    <span class="add-on">个</span>
+  </td>
+  <th>质检取样</th>
+  <td>
+    <input type="text" class="span3" value="${unit.fetchCheckTaskQcSample()}" readonly/>
+    <span class="add-on">个</span>
   </td>
 </tr>
 
@@ -100,7 +108,19 @@
     </label>
   #{/list}
   </td>
-  <td colspan="2">
+  <th>阶段</th>
+  <td>
+    <span style="color:${unit.stage.rgb()}">${unit.stage.label()}</span>
+  </td>
+  <th>B2B选项</th>
+  <td>
+    <label class="checkbox inline">
+      <input type="checkbox"> B2B
+    </label>
+  </td>
+</tr>
+<tr>
+  <td colspan="6">
   #{list items: unit.relateShipment()}
     <div>
       <a href="@{Shipments.show(_.id)}" target="_blank">${_.id} (${_.type.label()})</a>
@@ -112,7 +132,7 @@
 </tr>
 
 <tr>
-  <td colspan="4">
+  <td colspan="6">
     <h4>Memo</h4>
     <textarea rows="8" class="span12" name="unit.comment" id="memo">${unit.comment.raw()}</textarea>
   </td>
