--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -122,7 +122,7 @@
       <br>${unit.cooperator?.name}
     </td>
     <td>${unit.whouse?.name()}</td>
-    <td>1000</td>
+    <td>${unit.originQty}</td>
     <td>${unit.attrs.planQty}/${unit.attrs.qty}/${unit.availableQty}</td>
       #{ifnot deliveryplan}
         <td>${unit.attrs.currency.symbol()} ${unit.attrs.formatPrice().format('#,###.##')}</td>
