--- a/core/app/views/Deliveryments/index.html
+++ b/core/app/views/Deliveryments/index.html
@@ -71,7 +71,7 @@
     <div class="span12">
       <table class="table table-condensed table-bordered">
         <tr>
-          <th></th>
+          <th width="20px;"></th>
           <th>#</th>
           <th>请款单</th>
           <th>Name</th>
