--- a/core/app/views/ProcureUnits/detail.html
+++ b/core/app/views/ProcureUnits/detail.html
@@ -55,8 +55,6 @@
       <th>预计运输时间</th>
       <th>实际交货时间</th>
       <th>创建时间</th>
-      <th>最新收货时间</th>
-      <th>最新入库时间</th>
       <th>出库时间</th>
       <th>项目名称</th>
     </tr>
@@ -64,7 +62,7 @@
       <td>${unit.id}</td>
       <td>${unit.selling?.sellingId}</td>
       <td>${unit.product?.sku}</td>
-      <td>${unit.fba?.id}</td>
+      <td>${unit.fba?.shipmentId}</td>
       <td>${unit.whouse?.name}</td>
       <td>${unit.cooperator?.name}</td>
       <td>${unit.attrs.price}</td>
@@ -81,9 +79,7 @@
       <td>#{time_tooltip time:unit.attrs.planShipDate/}</td>
       <td>#{time_tooltip time:unit.attrs.deliveryDate/}</td>
       <td>#{time_tooltip time:unit.createDate/}</td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>#{time_tooltip time:unit.outbound?.outboundDate/}</td>
       <td>${unit.projectName}</td>
     </tr>
   </table>
@@ -101,6 +97,7 @@
       <th>供应商</th>
       <th>单价</th>
       <th>剩余请款金额</th>
+      <th>分拆类型</th>
       <th>计划数</th>
       <th>收货数</th>
       <th>入库数</th>
@@ -109,12 +106,9 @@
       <th>质检结果</th>
       <th>阶段</th>
       <th>运输方式</th>
-      <th>预计交货时间</th>
-      <th>预计运输时间</th>
+      <th width="140px;">预计交货时间<br>预计运输时间</th>
       <th>实际交货时间</th>
       <th>创建时间</th>
-      <th>最新收货时间</th>
-      <th>最新入库时间</th>
       <th>出库时间</th>
       <th>项目名称</th>
     </tr>
@@ -123,11 +117,12 @@
       <td>${u.id}</td>
       <td>${u.selling?.sellingId}</td>
       <td>${u.product?.sku}</td>
-      <td>${u.fba?.id}</td>
+      <td>${u.fba?.shipmentId}</td>
       <td>${u.whouse?.name}</td>
       <td>${u.cooperator?.name}</td>
       <td>${u.attrs.price}</td>
       <td>${u.attrs.currency.symbol()} ${u.leftAmount().format('#,###.##')}</td>
+      <td style="background-color:${u.type?.rgb()}">${u.type?.label()}</td>
       <td>${u.attrs.planQty}</td>
       <td>${u.attrs.qty}</td>
       <td>${u.inboundQty}</td>
@@ -136,13 +131,12 @@
       <td>${u.result?.label()}</td>
       <td style="background-color:${u.stage?.rgb()}">${u.stage?.label()}</td>
       <td style="color:${u.shipType?.rgb()}">${u.shipType?.label()}</td>
-      <td>#{time_tooltip time:u.attrs.planDeliveryDate/}</td>
-      <td>#{time_tooltip time:u.attrs.planShipDate/}</td>
+      <td>
+        预计交货:#{time_tooltip time:u.attrs.planDeliveryDate/}<br>
+        预计运输:#{time_tooltip time:u.attrs.planShipDate/}</td>
       <td>#{time_tooltip time:u.attrs.deliveryDate/}</td>
       <td>#{time_tooltip time:u.createDate/}</td>
-      <td></td>
-      <td></td>
-      <td></td>
+      <td>#{time_tooltip time:u.outbound?.outboundDate/}</td>
       <td>${u.projectName}</td>
     </tr>
   #{/list}
