--- a/core/app/views/Outbounds/index.html
+++ b/core/app/views/Outbounds/index.html
@@ -74,7 +74,7 @@
 <div class="row-fluid">
   <form method="post" id="submit_form" action="@{Outbounds.confirmOutBound()}">
     <div class="span12">
-      <table class="table table-condensed table-bordered">
+      <table class="table table-condensed table-bordered" id="data_table">
         <tr>
           <th style="width:15px;">
             <input type="checkbox" id="checkbox_all" class="checkall">
