--- a/core/app/views/ProcureUnits/indexWhouse.html
+++ b/core/app/views/ProcureUnits/indexWhouse.html
@@ -108,7 +108,6 @@
           </th>
           <th width="60px;">采购计划ID</th>
           <th>阶段</th>
-          <th width="45px;">操作</th>
           <th width="80px;">Selling</th>
           <th width="160px;">Sku<br>产品名称</th>
           <th>FBA-ShipmentId</th>
@@ -118,11 +117,11 @@
           <th>采购单</th>
           <th>出货单</th>
           <th width="100px;">数量<br>(计划/交货/入库)</th>
-          <th rel="popover" content="<img src='/img/helper/fnsku.png' />" width="auto">FnSku</th>
+          <th rel="popover" content="<img src='/img/helper/fnsku.png' />" width="100px;">FnSku</th>
           <th>运输方式</th>
           <th width="140px;">时间<br>(预计交货/预计运输)</th>
           <th width="80px;">实际交货时间</th>
-          <th>质检结果</th>
+          <th width="30px;">质检结果</th>
           <th>项目名称</th>
           <th width="80px;">创建人<br>创建时间</th>
         </tr>
@@ -130,9 +129,12 @@
         <tr>
           <td><input type="checkbox" name="pids" cooperName="${unit.cooperator?.name}" project="${unit.projectName}"
                      value="${unit.id}" whouse="${unit.whouse?.name()}"></td>
-          <td><i class="icon-reorder"></i>${unit.id}</td>
+          <td data-toggle="toggle" data-target="#${tr_key}_${unit.id}" style="cursor:pointer;">
+            <i class="icon-reorder"></i>#{if unit.parent}
+            <i class="icon-retweet" title="拆" style="color:red"></i> #{/if}<br>
+          ${unit.id}
+          </td>
           <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
-          <td><a class="btn btn-mini btn-info">变更<br>详情</a></td>
           <td><a href="@{Sellings.selling(unit.selling?.sellingId)}" target="_blank">${unit.selling?.sellingId}</a></td>
           <td title="${unit.product?.abbreviation}">
             <a href="@{Products.show(unit.sku)}" target="_blank" rel="popover" content="${cooperItem?.memo}">${unit.sku}</a>
@@ -198,6 +200,130 @@
           </td>
           <td>${unit.projectName}</td>
           <td>${unit.handler?.username}<br>#{time_tooltip time:unit.createDate/}</td>
+        </tr>
+        <tr id="${tr_key}_${unit.id}" style="display:none;">
+          <td colspan="19">
+            <div class="row-fluid" id="actions_${unit.id}">
+
+              <div class="span3">
+                <dl>
+                  <dt>Comment</dt>
+                  <dd>${unit.comment}</dd>
+                </dl>
+
+              </div>
+              <div class="span3">
+                <dl>
+                  <dt>关联运输单</dt>
+                  <dd>
+                    <ul>
+                        #{list items:unit.relateShipment(), as:'sp'}
+                          <li>
+                            <a href="@{Shipments.show(sp.id)}">${sp}</a>
+                            预计 #{time_tooltip time: sp.dates.planBeginDate /} 开船
+                          </li>
+                        #{/list}
+                    </ul>
+                  </dd>
+                </dl>
+                <dl>
+                  <dt>关联 FBA</dt>
+                  <dd>
+                      #{if unit.fba}
+                        <a href="${unit.fba.fbaLink()}">
+                          <i class="icon-external-link"></i>
+                        ${unit.fba.shipmentId}
+                        </a>
+                      #{/if}
+                      #{else }
+                        <span class="text-warning">还没有 FBA</span>
+                      #{/else}
+                  </dd>
+                </dl>
+              </div>
+
+              <div class="span3">
+                <table class="table table-condensed table-bordered">
+                  <tr>
+                    <td>实际交货量</td>
+                    <td>实际交货日期</td>
+                  </tr>
+                  <tr>
+                    <td>${unit.attrs.qty}</td>
+                    <td>${unit.attrs.deliveryDate.los()}</td>
+                  </tr>
+                </table>
+              </div>
+
+              <div class="span3">
+                <div class="btn-toolbar">
+                  <!-- 普通修改 -->
+                    #{if unit.selling}
+                      <a href="@{ProcureUnits.edit(unit.id)}" target="_blank" class="btn btn-small btn-primary">修改</a>
+                    #{/if}
+                    #{else }
+                      <a href="@{ProcureUnits.editManual(unit.id)}" target="_blank" class="btn btn-small btn-primary">修改</a>
+                    #{/else}
+                    #{if unit.stage in [models.procure.ProcureUnit.STAGE.PLAN, models.procure.ProcureUnit.STAGE.DELIVERY]}
+                      <a href="@{ProcureUnits.destroy(unit.id)}" data-method='DELETE' data-confirm="确认删除?" class="btn btn-small btn-danger">
+                        删除
+                      </a>
+                    #{/if}
+                    #{power.ck "procures.dosplitunit"}
+                      <a href="@{ProcureUnits.detail(unit.id)}#${unit?.id}" target="_blank" class="btn btn-small btn-info">变更详情</a>
+                        #{if unit.stage == models.procure.ProcureUnit.STAGE.DELIVERY}
+                          <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning">采购分拆</a>
+                        #{/if}
+                        #{if unit.stage == models.procure.ProcureUnit.STAGE.IN_STORAGE}
+                          <a href="@{ProcureUnits.splitUnit(unit.id)}" class="btn btn-small btn-warning">库存分拆</a>
+                        #{/if}
+                    #{/power.ck}
+                </div>
+
+                  #{if delivery}
+                    <div class="btn-toolbar">
+                        #{power.ck "procures.delivery"}
+                            #{if unit.selling}
+                              <!-- 交货页面（没有Selling不允许） -->
+                              <a href="@{ProcureUnits.deliveryUnit(unit.id)}" class="btn btn-small btn-warning">交货</a>
+                            #{/if}
+                        #{/power.ck}
+                      <!-- 确认到货代处 -->
+                        #{if unit.selling}
+                            #{ifnot unit.isPlaced}
+                              <a data-remote='true' data-method='PUT' class="btn btn-small btn-info" id="isplaced_${unit.id}_btn"
+                                 href="@{ProcureUnits.markPlace(unit.id)}" data-disable-with='更新中'>抵达货代</a>
+                            #{/ifnot}
+                        #{/if}
+                      <a href="javascript:void(0)" class="btn btn-small btn-warning" data-href="@{ProcureUnits.confirmUnit(unit.id)}"
+                         name="confirmUnitBtn" data-tragettr="procureUnit_${unit.id}">已核单</a>
+                    </div>
+                      #{if unit.fba}
+                          #{power.ck 'fbas.update'}
+                            <div class="btn-toolbar">
+                              <a href="javascript:void(0)" class="btn btn-small btn-warning" id="replaceUnitFBA"
+                                 data-unit-id="${unit.id}">更换 ${unit.fba?.shipmentId}
+                              </a>
+                            </div>
+                          #{/power.ck}
+                      #{/if}
+                    <div class="btn-toolbar">
+                        #{if unit.fba}
+                          <a href="@{FBAs.packingSlip(unit.fba.id)}" target="_blank" class="btn btn-small btn-success">箱內麦</a>
+                          <a href="javascript:void(0)" class="btn btn-small btn-success" name="boxLabelBtn" data-id="${unit.fba.id}">箱外麦</a>
+                        #{/if}
+                    </div>
+                  #{/if}
+              </div>
+            </div>
+              #{ifnot norecord}
+                  #{cache unit.recordsPageCacheKey(), for:'3h'}
+                    <div style="max-height:160px;overflow:auto;margin-bottom:20px;">
+                        #{records_ul  records: unit.records()/}
+                    </div>
+                  #{/cache}
+              #{/ifnot}
+          </td>
         </tr>
       #{/list}
       #{if p != null}
