--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -66,7 +66,7 @@
         </td>
       #{/if}
     <td data-toggle="toggle" data-target="#${tr_key}_${unit.id}" style="cursor:pointer;">
-      <i class="icon-reorder"></i>#{if unit.isParent()} <i class="icon-retweet" title="拆" style="color:red"></i>#{/if}<br>
+      <i class="icon-reorder"></i>#{if unit.parent} <i class="icon-retweet" title="拆" style="color:red"></i>#{/if}<br>
     ${unit.id}
     </td>
     <td style="background:${unit.stage.rgb()}">${unit.stage.label()}</td>
