增加采购计划列表币种为空的判断

--- a/core/app/views/ProcureUnits/_unit_list.html
+++ b/core/app/views/ProcureUnits/_unit_list.html
@@ -127,9 +127,9 @@
     ${unit.attrs.planQty}/${unit.attrs.qty}/${unit.availableQty}
     </td>
       #{ifnot deliveryplan}
-        <td>${unit.attrs.currency.symbol()} ${unit.attrs.formatPrice().format('#,###.##')}</td>
-        <td>${unit.attrs.currency.symbol()} ${unit.totalAmount().format('#,###.##')}</td>
-        <td>${unit.attrs.currency.symbol()} ${unit.leftAmount().format('#,###.##')}</td>
+        <td>${unit.attrs.currency?.symbol()} ${unit.attrs.formatPrice().format('#,###.##')}</td>
+        <td>${unit.attrs.currency?.symbol()} ${unit.totalAmount().format('#,###.##')}</td>
+        <td>${unit.attrs.currency?.symbol()} ${unit.leftAmount().format('#,###.##')}</td>
       #{/ifnot}
     <td>
       <!-- FnSku 下载 Label -->
